GNOME Bugzilla – Bug 742958
double clicking on a title bar makes the window extremely small, can't be used or expanded again
Last modified: 2015-02-19 22:17:43 UTC
Created attachment 294580 [details] g-i-s unusably small By mistake I double clicked on a title bar of gnome-initial-setup. The window got shrunk to a totally minimal size and it could not be used. However, it could not be expanded either, it's non-resizable, non-movable and double clicking on a title bar doesn't maximize it. See screenshot. gnome-initial-setup-3.14.2.1-2.fc21.x86_64
Created attachment 294596 [details] [review] driver: Allow resizing and moving the window on small screens Otherwise, if the WM doesn't maximize or allows users to unmaximize, we might be stuck in a too small window that doesn't move and can't be resized or maximized again.
Attachment 294596 [details] pushed as 84d9c96 - driver: Allow resizing and moving the window on small screens