driver: Allow resizing and moving the window on small screens

Otherwise, if the WM doesn't maximize or allows users to unmaximize,
we might be stuck in a too small window that doesn't move and can't be
resized or maximized again.

https://bugzilla.gnome.org/show_bug.cgi?id=742958